vlib/v/parser/tests/inline_sum_type_option_err.out
vlib/v/parser/tests/inline_sum_type_option_err.vv:1:11: error: inline sum types have been deprecated and will be removed on January 1, 2023 due to complicating the language and the compiler too much; define named sum types with `type Foo = Bar | Baz` instead
    1 | fn foo() ?string | int {
      |           ~~~~~~
    2 |     return 0
    3 | }
