vlib/v/parser/tests/inline_sum_type_option_err.vv
fn foo() ?string | int {
	return 0
}
